Copyright (c) 2002-2009 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

  Silva 2.1.4 (unreleased)

    Bug fixes

      - Fixing SilvaFind in documentation

      - Fix annoying popup when using kupu and safari

  Silva 2.1.4b2 (2009-04-23)

    Bug fixes

      - Remove absolute urls in SMI CSS. This CSS is included using
        import, so asolute path are not required. This might break as
        well with strange Apache rewrite rules.

      - Cleanup edge case in kupu transforms (SilvaDocument) where nested
        lists can cause bare <br> tags to be stored in the silvaxml; this 
        raises errors when rendering with the widgets-based renderer

  Silva 2.1.3 (2009-03-26)

    Bug fixes

      - Fix element order in TOC rendering when the silva order is
        checked.

      - Silva Links are displayed by default TOC kupu objects (like
        they used to be).

      - CTRL+SHIFT+ENTER in kupu while the cursor is in a table will
        create a new empty paragraph below the table.  This feature
        is to improve editing ability when a table is adjacent to an
        external source or another table

      - improve keyboard navigability in kupu around external sources:
        left,right in an ES moves cursor up
        enter in an ES inserts a new paragraph after and moves cursor
        down, right, tab in an es moves cursor down

      - if an ES is the first element in a document, activate the ES
        tool when kupu initializes, and ignore the tab key when in an
        external source.

  Silva 2.1.3b2 (2009-03-20)

    Bug fixes

      - Fix an invalid syntax in webdav support.

      - Fixed an issue in Kupu, where text got 'title' style instead
        of 'plain'.

    Ported from Silva Trunk (2.2b1)

      - LinesFields in external sources would not be saved in kupu if they
        were empty.

      - zip files generated in MACOSX can now be imported -- the skips meta